# crop-segmentation

./: .gitignore  README.md  dataload.py  eda.py  filter_dataset.py  loss.py  main_train.py  model.py  pyproject.toml  run_training.py  train.py
configs/: train_config.yml
src/crop_segmentation/: dataload.py  datasets.py  loss.py  model.py  plotting.py  train.py
tests/unit/: test_loss.py
