[tool.poetry]
name = "crop-segmentation"
version = "0.1.0"
description = "Segmentation of aerial images of crops using CNNs."
authors = ["Daniel <huffdanielt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.1.1"
poetry = "^1.7.1"
torchvision = "^0.16.1"
pyyaml = "^6.0.1"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
